tests/e2e/errors/runtime_undefined_var.lox
print x; // expect runtime error: Undefined variable '"x"'.
